burn_devices_sources = ['joyprocess.cpp']

all_burn_devices = {
    '6821pia': {'desc': 'Motorola 6821 PIA', 'sources': ['6821pia.cpp']},
    '6840ptm': {'desc': 'Motorola 6840 PTM', 'sources': ['6840ptm.cpp']},
    '74259': {'desc': 'TTL 74259 addressable latch', 'sources': ['74259.cpp']},
    '8255ppi': {'desc': 'Intel 8255 PPI', 'sources': ['8255ppi.cpp']},
    '8257dma': {'desc': 'Intel 8257 DMA controller', 'sources': ['8257dma.cpp']},
    'ad59mc07': {'desc': 'AD-59MC07 protection MCU', 'sources': ['ad59mc07.cpp']},
    'alpha8201': {'desc': 'Alpha 8201 protection MCU', 'sources': ['alpha8201.cpp']},
    'atariic': {'desc': 'Atari custom IC helpers', 'sources': ['atariic.cpp']},
    'atarijsa': {'desc': 'Atari JSA sound board', 'sources': ['atarijsa.cpp']},
    'atarimo': {'desc': 'Atari motion object generator', 'sources': ['atarimo.cpp']},
    'atarirle': {'desc': 'Atari RLE object renderer', 'sources': ['atarirle.cpp']},
    'atarivad': {'desc': 'Atari VAD tilemap generator', 'sources': ['atarivad.cpp']},
    'avgdvg': {'desc': 'Atari AVG/DVG vector generator', 'sources': ['avgdvg.cpp']},
    'bsmt2000': {'desc': 'BSMT2000 sound device', 'sources': ['bsmt2000.cpp']},
    'c169': {'desc': 'Namco C169 ROZ device', 'sources': ['c169.cpp']},
    'decobsmt': {'desc': 'Data East BSMT sound board', 'sources': ['decobsmt.cpp']},
    'ds2404': {'desc': 'Dallas DS2404 RTC/NVRAM', 'sources': ['ds2404.cpp']},
    'dtimer': {'desc': 'Generic device timer', 'sources': ['dtimer.cpp']},
    'earom': {'desc': 'EAROM non-volatile memory', 'sources': ['earom.cpp']},
    'eeprom': {'desc': 'Serial EEPROM device', 'sources': ['eeprom.cpp']},
    'epic12': {'desc': 'EPIC12 custom blitter', 'sources': ['epic12.cpp']},
    'gaelco_crypt': {'desc': 'Gaelco encryption device', 'sources': ['gaelco_crypt.cpp']},
    'i2ceeprom': {'desc': 'I2C EEPROM device', 'sources': ['i2ceeprom.cpp']},
    'i4x00': {'desc': 'I4X00 custom video device', 'sources': ['i4x00.cpp']},
    'i8155': {'desc': 'Intel 8155 RAM/I/O/timer', 'sources': ['i8155.cpp']},
    'intelfsh': {'desc': 'Intel/AMD flash memory', 'sources': ['intelfsh.cpp']},
    'k051316': {
        'desc': 'Konami K051316 zoom/rotation tilemap',
        'sources': ['k051316.cpp'],
    },
    'k053936': {
        'desc': 'Konami K053936 zoom/rotation (ROZ+) tilemap',
        'sources': ['k053936.cpp'],
    },
    'k1ge': {'desc': 'SNK K1GE/K2GE video device', 'sources': ['k1ge.cpp']},
    'kaneko_hit': {'desc': 'Kaneko HIT protection', 'sources': ['kaneko_hit.cpp']},
    'kaneko_tmap': {'desc': 'Kaneko tilemap device', 'sources': ['kaneko_tmap.cpp']},
    'mathbox': {'desc': 'Mathbox co-processor', 'sources': ['mathbox.cpp']},
    'mb87078': {
        'desc': 'Fujitsu MB87078 volume controller',
        'sources': ['mb87078.cpp'],
    },
    'mc8123': {'desc': 'MC-8123 Z80 encryption device', 'sources': ['mc8123.cpp']},
    'mermaid': {'desc': 'Mermaid video device', 'sources': ['mermaid.cpp']},
    'midcsd': {'desc': 'Midway CSD sound board', 'sources': ['midcsd.cpp']},
    'midcvsd': {'desc': 'Midway CVSD sound board', 'sources': ['midcvsd.cpp']},
    'midsat': {'desc': 'Midway Seattle audio board', 'sources': ['midsat.cpp']},
    'midsg': {'desc': 'Midway Sounds Good board', 'sources': ['midsg.cpp']},
    'midssio': {'desc': 'Midway SSIO sound board', 'sources': ['midssio.cpp']},
    'midtcs': {'desc': 'Midway TCS sound board', 'sources': ['midtcs.cpp']},
    'namco_c45': {'desc': 'Namco C45 road generator', 'sources': ['namco_c45.cpp']},
    'namcoio': {'desc': 'Namco I/O controller', 'sources': ['namcoio.cpp']},
    'nb1414m4': {'desc': 'Nichibutsu NB1414M4 device', 'sources': ['nb1414m4.cpp']},
    'nb1414m4_8bit': {
        'desc': 'Nichibutsu NB1414M4 8-bit device',
        'sources': ['nb1414m4_8bit.cpp'],
    },
    'nmk004': {'desc': 'NMK004 sound MCU', 'sources': ['nmk004.cpp']},
    'nmk112': {'desc': 'NMK112 sample banking device', 'sources': ['nmk112.cpp']},
    'pandora': {'desc': 'Pandora sprite generator', 'sources': ['pandora.cpp']},
    'pic8259': {'desc': 'Intel 8259 PIC', 'sources': ['pic8259.cpp']},
    'pit8253': {'desc': 'Intel 8253 PIT', 'sources': ['pit8253.cpp']},
    'poly': {'desc': 'Polygon rendering device', 'sources': ['poly.cpp']},
    'qs1000': {'desc': 'QS1000 sound device', 'sources': ['qs1000.cpp']},
    'resnet': {'desc': 'Resistor network helper', 'sources': ['resnet.cpp']},
    'rtc9701': {'desc': 'Epson RTC-9701 clock', 'sources': ['rtc9701.cpp']},
    'seibucop': {'desc': 'Seibu COP protection', 'sources': ['seibucop.cpp']},
    'seibusnd': {'desc': 'Seibu sound system', 'sources': ['seibusnd.cpp']},
    'serflash': {'desc': 'Serial flash memory', 'sources': ['serflash.cpp']},
    'sknsspr': {'desc': 'Super Kaneko Nova sprite device', 'sources': ['sknsspr.cpp']},
    'slapstic': {'desc': 'Atari Slapstic protection', 'sources': ['slapstic.cpp']},
    'st0020': {'desc': 'Seta ST-0020 sprite device', 'sources': ['st0020.cpp']},
    't5182': {'desc': 'Toshiba T5182 sound MCU interface', 'sources': ['t5182.cpp']},
    'taito_m68705': {
        'desc': 'Taito M68705 MCU interface',
        'sources': ['taito_m68705.cpp'],
    },
    'timekpr': {'desc': 'M48T02 Timekeeper NVRAM', 'sources': ['timekpr.cpp']},
    'tlc34076': {'desc': 'TI TLC34076 RAMDAC', 'sources': ['tlc34076.cpp']},
    'tms34061': {'desc': 'TI TMS34061 video controller', 'sources': ['tms34061.cpp']},
    'tms9928a': {'desc': 'TI TMS9928A VDP', 'sources': ['tms9928a.cpp']},
    'v3021': {'desc': 'V3021 RTC device', 'sources': ['v3021.cpp']},
    'vdc': {'desc': 'PC Engine VDC/VCE device', 'sources': ['vdc.cpp']},
    'watchdog': {'desc': 'Watchdog timer', 'sources': ['watchdog.cpp']},
    'x2212': {'desc': 'Xicor X2212 NVRAM', 'sources': ['x2212.cpp']},
}

# Enablement is derived from the parent's flat `enabled_components` set
# (device names are unique across cpu/device/sound namespaces).
burn_device_status = {}
foreach name, device : all_burn_devices
    enabled = enabled_components.contains(name)
    burn_device_status += {device['desc']: enabled ? 'ON' : 'OFF'}
    if enabled
        burn_devices_sources += device['sources']
    endif
endforeach
summary(burn_device_status, section: 'Burn devices', list_sep: '')

burn_devices_lib = static_library(
    'burn_devices',
    burn_devices_sources,
    # snd headers come from global_inc; pce stays local for the VDC device.
    include_directories: [include_directories(['../drv/pce']), global_inc],
    dependencies: [burn_dep, cpu_dep],
)

burn_devices_dep = declare_dependency(
    link_with: burn_devices_lib,
    include_directories: include_directories('.'),
)
